# recogedor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  TODO  config.toml.sample  flake.nix
src/: config.rs  endpoint.rs  imap.rs  jmap.rs  main.rs  script.rs
src/ast/: cond.rs  mod.rs  stmt.rs  value.rs
src/ir/: closure.rs  mod.rs
src/script/: closure.rs  cond.rs  mod.rs  stmt.rs  value.rs
