[package]
name = "recogedor"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.7"
async-imap = { version = "0.9", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
anyhow = { version = "1", features = ["backtrace"] }
futures = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["cargo"] }
log = "0.4"
env_logger = "0.10"
lexpr = "0.2"
regex = "1"
once_cell = "1"